--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "oop",
   "version": "1.0.0",
-  "description": "An OOP implementation that models a Shopping cart and takes advantage of encapsulation, inheritance, polymorphism and abstraction. An Andela LOS24 Bootcamp day 2 output",
+  "description": "An OOP implementation that models a Bank Account and takes advantage of encapsulation, inheritance, polymorphism and abstraction. An Andela LOS24 Bootcamp day 2 output",
   "main": "oop.js",
-  "directories": {
-    "test": "tests"
-  },
   "scripts": {
     "test": "mocha --compilers js:babel-register",
     "build": "babel-node oop.js"
@@ -24,12 +21,13 @@
   },
   "homepage": "https://github.com/9jaswag/OOP#readme",
   "dependencies": {
-    "chai": "^4.0.2",
-    "mocha": "^3.4.2"
+    
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.24.1"
+    "babel-register": "^6.24.1",
+    "chai": "^4.0.2",
+    "mocha": "^3.4.2"
   }
 }
