--- a/package.json
+++ b/package.json
@@ -24,13 +24,12 @@
   },
   "homepage": "https://github.com/9jaswag/OOP#readme",
   "dependencies": {
-    
+    "chai": "^4.0.2",
+    "mocha": "^3.4.2"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "chai": "^4.0.2",
-    "mocha": "^3.4.2"
+    "babel-register": "^6.24.1"
   }
 }
